Fix Overflow Days Alignment (#246)
* Initializing Fix_Overflow_Days_Alignment for empty Pull Request

* Fix overflow days alignment, vastly improve single-month experience

* Fix weird overflow

* Simplify navigation controls for single-month

* Fix vertical box height and border

* Leave the top-follower sticky

* This has been bothering me for this long, and it was this simple?!

* Fix preview day background

* Fix day heights on all vertical calendars, and don't highlight the year day number

* Same for preview day

--- a/resources/sass/calendar/top_follower.scss
+++ b/resources/sass/calendar/top_follower.scss
@@ -18,6 +18,31 @@
     transition: box-shadow 0.3s ease;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 
+    &.single_month {
+        align-self: stretch;
+        margin: 0;
+        width: auto;
+        box-shadow: none;
+        border-bottom: 1px solid $calendar-border-color;
+        border-radius: 0;
+
+        .btn_container {
+            border-radius: 0;
+
+            &:last-child {
+                border-radius: 0 !important;
+            }
+        }
+
+        .btn {
+            border-radius: 0 !important;
+        }
+
+        .btn.sub_year, .btn.add_year {
+            display: none;
+        }
+    }
+
     &.follower_shadow {
         box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     }
