--- a/resources/sass/calendar/viewport.scss
+++ b/resources/sass/calendar/viewport.scss
@@ -2,28 +2,46 @@
 
 #calendar {
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
     margin-bottom:5px;
     width: 100%;
     color: $main-text-color;
-    min-height: 85%;
     justify-content: center;
+    flex: 1;
+
+    &:not(.single_month) {
+        padding: 0 14px;
+    }
 
     &.single_month {
-        align-items: stretch;
+        justify-content: stretch;
+
+        .timespan_container {
+            min-width: 100%;
+            min-height: 100%;
+            justify-self: stretch;
+            align-self: stretch;
+            margin: 0;
+            border-radius: 0;
+            box-shadow: none;
+            border-bottom: 1px solid $card-border-color;
+
+            &.vertical {
+                border-radius: 0;
+                align-self: stretch;
+                margin: 0;
+            }
+        }
     }
 }
 
 .timespan {
-
     &_container{
         display: flex;
+        flex-direction: column;
         align-self: flex-start;
         text-align: center;
-        flex-direction: column;
-        flex: 1 0 85%;
         position: relative;
         background-color: $card-bg-color;
         border-radius: 4px;
@@ -38,7 +56,7 @@
             text-align:center;
             overflow: hidden;
             text-overflow: ellipsis;
-            min-width: 5rem;
+            min-width: 7rem;
         }
 
         .week_day_name:not(:last-child){
@@ -57,9 +75,12 @@
     }
 
     &_row {
-        display: flex;
-        flex-direction: row;
+        display: grid;
+        grid-auto-columns: 1fr;
+        grid-auto-flow: column;
         flex: 1;
+        background-image: $disabled-crosshatch;
+        z-index: 8;
 
         &.intercalary{
 
@@ -69,8 +90,9 @@
         }
 
         &_names{
-            display: flex;
-            flex-direction: row;
+            display: grid;
+            grid-auto-columns: 1fr;
+            grid-auto-flow: column;
         }
 
         &_container{
@@ -86,15 +108,16 @@
     }
 
     &_day {
+        box-sizing: border-box;
         display: flex;
         flex-direction: column;
         min-height:8rem;
-        flex: 1;
+        flex: 1 1 0px;
         background-color: $card-bg-color;
         min-width: 7rem;
         position: relative;
         border-top:1px solid $calendar-border-color;
-	padding: 2px;
+	    padding: 2px;
 
         &.empty_timespan_day{
             background-color:$gray-secondary;
@@ -112,11 +135,12 @@
     }
 
     &_intercalary{
+        box-sizing: border-box;
         background-color: $card-bg-color;
         display: flex;
         flex-direction: column;
         min-height:8rem;
-        flex: 1;
+        flex: 1 1 0px;
         min-width: 5rem;
 
         &:not(:first-child){
@@ -135,7 +159,6 @@
         min-height:8rem;
         flex: 1;
         color: rgba(#98a0a6, 0.6);
-        background-image: $disabled-crosshatch;
         cursor: not-allowed;
         min-width: 7rem;
         border-top:1px solid $calendar-border-color;
@@ -409,6 +432,12 @@
 
     .timespan_day{
         text-align:left;
+        min-height: fit-content;
+
+        &:not(:last-child) {
+            border-right: 0;
+        }
+
         &.week_end {
             border-bottom:2px solid $calendar-border-color;
         }
@@ -559,7 +588,7 @@
                 line-height: 24px;
             }
 
-            &.preview_day:hover {
+            &.preview_day:hover:after {
                 background-color: lighten($preview-day-color, 10%);
             }
 
@@ -591,7 +620,7 @@
     background-image: linear-gradient(to right, rgba($current-day-color, 0.2), rgba($current-day-color, 0.2));
 
 
-    & .number {
+    & .number:not(.year_day) {
         background-color: $current-day-number-color;
         color: white;
     }
@@ -608,17 +637,20 @@
     left: 2px;
 }
 
-
-div.copyright {
-    position:sticky;
-    left: 0;
-    right: 0;
-}
-
 .preview_day{
-    background-color: rgba($preview-day-color, 0.2);
+    &:before {
+        background-color: rgba($preview-day-color, 0.2);
+        content: ' ';
+        display: block;
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: 0;
+        z-index: 5;
+    }
 
-    & .number {
+    & .number:not(.year_day) {
         background-color: $preview-day-number-color;
         color: white;
     }
